--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title></title>
+	<title>MERN STACK - GRUPO A</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -21,12 +21,12 @@
 
 	<div id="header-container">
 		<header class="wrapper clearfix">
-			<h1 id="title">h1#title</h1>
+			<h1 id="title">Curso MERN Stack - Grupo A</h1>
 			<nav>
 				<ul>
-					<li><a href="#">nav ul li a</a></li>
-					<li><a href="#">nav ul li a</a></li>
-					<li><a href="#">nav ul li a</a></li>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">Actividades</a></li>
+					<li><a href="#">Contacto</a></li>
 				</ul>
 			</nav>
 		</header>
