--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<article>
 				<header>
 					<h1>Trabajos prácticos</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+					<p>A continuación se listan los trabajos prácticos realizados por el grupo.</p>
 				</header>
 				<section>
 					<h2>article section h2</h2>
