Se agrega info al Footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	<div id="footer-container">
 		<footer class="wrapper">
-			<h3>footer</h3>
+			<h3>@MER STACK DACEFyN 2021</h3>
 		</footer>
 	</div>
 
